--- a/IOSWINGv2/nbproject/private/private.properties
+++ b/IOSWINGv2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\m_lig\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\alachman\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
