--- a/IOSWINGv2/nbproject/private/private.properties
+++ b/IOSWINGv2/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\alachman\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Wojtek\\Downloads\\laborm2014_startProject_Hibernate\\lib\\mysql-connector-java-5.1.30.jar
+user.properties.file=C:\\Users\\Wojtek\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
