--- a/IOProj/nbproject/private/private.properties
+++ b/IOProj/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\m_lig\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3352403153.properties
+deploy.ant.properties.file=C:\\Users\\Wojtek\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv31895676973.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/glassfish4/glassfish
-j2ee.server.instance=[C:\\glassfish4\\glassfish;C:\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/glassfish4
+j2ee.server.domain=C:/Users/Wojtek/GlassFish_Server/glassfish/domains/java
+j2ee.server.home=C:/Users/Wojtek/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Wojtek\\GlassFish_Server\\glassfish;C:\\Users\\Wojtek\\GlassFish_Server\\glassfish\\domains\\java]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/Wojtek/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\m_lig\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Wojtek\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
