--- a/IOSWINGv2/nbproject/private/private.properties
+++ b/IOSWINGv2/nbproject/private/private.properties
@@ -1,3 +1,6 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Wojtek\\Downloads\\laborm2014_startProject_Hibernate\\lib\\mysql-connector-java-5.1.30.jar
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Wojtek\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
