--- a/IOSWINGv2/nbproject/project.properties
+++ b/IOSWINGv2/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/IOSWINGv2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=../mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Wojtek\\Downloads\\mysql-connector-java\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -66,7 +66,7 @@ main.class=ioswingv2.IOSWINGv2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
